--- a/.github/workflows/ship_time.yaml
+++ b/.github/workflows/ship_time.yaml
@@ -1,4 +1,4 @@
-name: Continuous Ship Time Update
+name: Hourly Ship Time Update
 
 on:
   push:
@@ -6,15 +6,15 @@ on:
       - main
 
 jobs:
-  continuous_ship_time_update:
+  hourly_ship_time_update:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Update to use the latest version
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3  # Update to use the latest version
+        uses: actions/setup-python@v3
         with:
           python-version: '3.x'
 
@@ -22,11 +22,11 @@ jobs:
         run: |
           pip install timezonefinder pytz requests colorama
 
-      - name: Run Python script every second
+      - name: Run Python script every hour
         run: |
           i=0
           while [ $i -lt 60 ]; do
             python shiptime.py > output_$i.txt
-            sleep 1
+            sleep 60  # Wait for 60 seconds
             ((i++))
           done
