--- a/.github/workflows/ship_time.yaml
+++ b/.github/workflows/ship_time.yaml
@@ -11,20 +11,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          ref: main  # specify the branch name to checkout
-        runs:
-          using: 'node20'
-          main: 'main.js'
+        uses: actions/checkout@v4  # Update to the latest version
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v3  # Update to the latest version
         with:
-          python-version: '3.x'
-        runs:
-          using: 'node20'
-          main: 'main.js'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
